--- a/front/package.json
+++ b/front/package.json
@@ -16,12 +16,14 @@
     "react-dom": "^18",
     "react-redux": "^9.0.4",
     "sass": "^1.69.5",
-    "tailwind-scrollbar": "^3.0.5"
+    "tailwind-scrollbar": "^3.0.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
