--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.3",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "react": "^18",
