--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-redux": "^9.0.4",
     "sass": "^1.69.5",
+    "socket.io-client": "^4.7.2",
     "tailwind-scrollbar": "^3.0.5",
     "uuid": "^9.0.1"
   },
